fix z-index

--- a/themes/next/source/css/_schemes/Muse/_menu.styl
+++ b/themes/next/source/css/_schemes/Muse/_menu.styl
@@ -8,7 +8,7 @@
     padding: 0;
     background: white;
     border: 1px solid $gray-lighter;
-    z-index: 99;
+    z-index: 9999;
   }
 }
 
